Updated issue 2025-2 news items

--- a/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.html
+++ b/_news/RJ-2025-2-bioconductor/RJ-2025-2-bioconductor.html
@@ -119,8 +119,7 @@ code span.wa { color: #5e5e5e; font-style: italic; }
   <meta name="citation_issue" content="2" />
   <meta name="citation_journal_title" content="The R Journal" />
   <meta name="citation_issn" content="2073-4859" />
-  <meta name="citation_firstpage" content="257" />
-  <meta name="citation_lastpage" content="260" />
+  <meta name="citation_firstpage" content="1" />
   <meta name="citation_fulltext_world_readable" content />
   <meta name="citation_online_date" content="2025/06/01" />
   <meta name="citation_publication_date" content="2025/06/01" />
@@ -132,7 +131,7 @@ code span.wa { color: #5e5e5e; font-style: italic; }
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","date","author","output","volume","issue","slug","draft","journal","description","pdf_url","citation_url","creative_commons","packages","CTV","csl"]}},"value":[{"type":"character","attributes":{},"value":["Bioconductor Notes, September 2025"]},{"type":"character","attributes":{},"value":["2025-06-01"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Maria Doyle, Bioconductor Community Manager"]},{"type":"character","attributes":{},"value":["University of Limerick"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Bioconductor Core Developer Team"]},{"type":"character","attributes":{},"value":["Dana-Farber Cancer Institute, Roswell Park Comprehensive Cancer Center, City University of New York, Fred Hutchinson Cancer Research Center, Mass General Brigham"]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[2]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor"]},{"type":"logical","attributes":{},"value":[false]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","issn","firstpage","lastpage"]}},"value":[{"type":"character","attributes":{},"value":["The R Journal"]},{"type":"character","attributes":{},"value":["2073-4859"]},{"type":"integer","attributes":{},"value":[257]},{"type":"integer","attributes":{},"value":[260]}]},{"type":"character","attributes":{},"value":["\"Bioconductor Notes, September 2025\" published in The R Journal."]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor.pdf"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org/news/RJ-2025-2-bioconductor"]},{"type":"character","attributes":{},"value":["CC BY"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["cran","bioc"]}},"value":[{"type":"list","attributes":{},"value":[]},{"type":"list","attributes":{},"value":[]}]},{"type":"list","attributes":{},"value":[]},{"type":"character","attributes":{},"value":["/home/hyndman/R/x86_64-pc-linux-gnu-library/4.5/rjtools/rjournal.csl"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","date","author","output","volume","issue","slug","draft","description","journal","pdf_url","citation_url","creative_commons","packages","CTV","csl"]}},"value":[{"type":"character","attributes":{},"value":["Bioconductor Notes, September 2025"]},{"type":"character","attributes":{},"value":["2025-06-01"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Maria Doyle, Bioconductor Community Manager"]},{"type":"character","attributes":{},"value":["University of Limerick"]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Bioconductor Core Developer Team"]},{"type":"character","attributes":{},"value":["Dana-Farber Cancer Institute, Roswell Park Comprehensive Cancer Center, City University of New York, Fred Hutchinson Cancer Research Center, Mass General Brigham"]}]}]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[2]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor"]},{"type":"logical","attributes":{},"value":[false]},{"type":"character","attributes":{},"value":["\"Bioconductor Notes, September 2025\" published in The R Journal."]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","issn","firstpage","lastpage"]}},"value":[{"type":"character","attributes":{},"value":["The R Journal"]},{"type":"character","attributes":{},"value":["2073-4859"]},{"type":"double","attributes":{},"value":[1]},{"type":"NULL"}]},{"type":"character","attributes":{},"value":["RJ-2025-2-bioconductor.pdf"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org/news/RJ-2025-2-bioconductor"]},{"type":"character","attributes":{},"value":["CC BY"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["cran","bioc"]}},"value":[{"type":"list","attributes":{},"value":[]},{"type":"list","attributes":{},"value":[]}]},{"type":"list","attributes":{},"value":[]},{"type":"character","attributes":{},"value":["/home/hyndman/R/x86_64-pc-linux-gnu-library/4.5/rjtools/rjournal.csl"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -2593,14 +2592,12 @@ workflows, and 8 books. <a href="https://bioconductor.org/books/release/">Books<
 built regularly from source, ensuring full reproducibility; an example is the
 community-developed <a href="https://bioconductor.org/books/release/OSCA/">Orchestrating Single-Cell Analysis with Bioconductor</a>.</p>
 <h2 data-number="3" id="core-team-and-infrastructure-updates"><span class="header-section-number">3</span> Core Team and Infrastructure Updates</h2>
-Of note:
+<p>Of note:</p>
 <ul>
-<li>
-A pair of machines with NVIDIA GPUs were added to the system. See
+<li>A pair of machines with NVIDIA GPUs were added to the system. See
 <a href="https://bioconductor.org/checkResults/3.22/bioc-gpu-LATEST/">devel branch build reports</a> for
-more information.
-<li>
-An <a href="https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html">HDF5Array vignette</a> includes new performance analysis data.
+more information.</li>
+<li>An <a href="https://bioconductor.org/packages/release/bioc/vignettes/HDF5Array/inst/doc/HDF5Array_performance.html">HDF5Array vignette</a> includes new performance analysis data.</li>
 </ul>
 <p>NEWS summaries for three contributed packages chosen at random from the 72 new software contributions are:</p>
 <!-- set.seed(1234); sample(1:72, size=3) gave indices -->
@@ -2716,7 +2713,7 @@ welcoming you!</p>
   volume = {17},
   issue = {2},
   issn = {2073-4859},
-  pages = {257-260}
+  pages = {1}
 }</pre>
 </div>
 <!--/radix_placeholder_appendices-->
